...
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rycyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- First button in the chain: Addpicture -->
            <Button
                android:id="@+id/btnPickImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_picture"
                android:backgroundTint="@color/blueBlack"
                android:textColor="@color/white"
                android:textStyle="bold"
...
