...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp" />

            <Button
                android:id="@+id/buttondelete"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/red"
                android:text="-"
...
